# MENG15100

./: README.md
data/att_faces/: att_faces_image_files.txt
data/celebrity_face_image_dataset/: image_files.txt
gui/: gui.py
labs/L1/: Lab1.ipynb
labs/L2/: Lab2.ipynb
labs/L2/menglab/: pyproject.toml
labs/L2/menglab/menglab/: __init__.py  gui.py  load.py
labs/L2/menglab2/: pyproject.toml
labs/L2/menglab2/menglab2/: __init__.py  gui.py  load.py
labs/L3/: Lab3.ipynb
labs/L3/menglab3/: pyproject.toml
labs/L3/menglab3/menglab3/: __init__.py  gui.py  hello.py  load.py
labs/L4/menglab4/: pyproject.toml
labs/L4/menglab4/menglab4/: __init__.py  gui.py  load.py  pytorch_training.py
notebooks/M2/: python_basics.ipynb
notebooks/M3/: linreg.csv  linreg.ipynb
notebooks/M4/: dimred_cluster.ipynb
notebooks/M5/: neural_networks.ipynb
