[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "menglab"
version = "0.1.0"
description = "Utilities for loading molecular boiling-point datasets with RDKit descriptors"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "requests>=2.28",
  "pyreadr>=0.4"
]

[project.optional-dependencies]
# Leave empty; RDKit must be installed via conda-forge
rdkit = []

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]
