[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "menglab"
version = "0.1.1"                # <- bump this
description = "Utilities for MENG15100 L2 labs"
readme = "README.md"
authors = [{ name = "Soren Kyhl" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "pyreadr",
  "requests",
]

[project.urls]
Homepage = "https://github.com/SorenKyhl/MENG15100"

# Tell Hatchling which package dir(s) to put into the wheel
[tool.hatch.build.targets.wheel]
packages = ["menglab"]

# Optional but nice for source dist
[tool.hatch.build.targets.sdist]
include = ["menglab", "README.md"]
