[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menglab"
version = "0.1.2"
description = "Utilities for MENG15100 L2 labs"
authors = [{ name = "Soren Kyhl" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/SorenKyhl/MENG15100"

[tool.setuptools.packages.find]
where = ["."]
include = ["menglab*"]
