[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menglab4"
version = "0.0.1"
description = "Utilities for MENG15100 L4 labs"
authors = [{ name = "Soren Kyhl" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/SorenKyhl/MENG15100"

[tool.setuptools.packages.find]
where = ["."]
include = ["menglab*"]
